--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=AngularCRUD
+
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management?useSSL=FALSE
+spring.datasource.username=root
+spring.datasource.password=admin123
+
+spring.jpa.hibernate.ddl-auto=update
